fix: fixing CSRF token
